--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,9 @@
 <ul>
-	<li><%= link_to "RSVP" , rsvp_path %></li>
-	<li><%= link_to "Git Registry" , gift_registry_path %></li>
-	<li><%= link_to "Directions" , directions_path %></li>
-	<li><%= link_to "Home" , root_path %></li>
+	<% if user_signed_in? %>
+		<li><%= link_to "RSVP" , rsvp_path %></li>
+		<li><%= link_to "Git Registry" , gift_registry_path %></li>
+		<li><%= link_to "Directions" , directions_path %></li>
+		<li><%= link_to "Home" , root_path %></li>
+	  	<li><%= link_to('Log Out', destroy_user_session_path, :method => :delete) %> </li>
+	<% end %>
 </ul>
