add styling and toastr

--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,1 +1,6 @@
-<%= react_component 'Gifts', { data: @gifts, current_user: @user_id } %>
+<div class="container-center">
+	<h1>Gifts</h1>
+</div>
+<div class="container-center">
+	<%= react_component 'Gifts', { data: @gifts, current_user: @user_id } %>
+</div>
