--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,9 +1,11 @@
-<ul>
-	<% if user_signed_in? %>
-		<li><%= link_to "RSVP" , rsvp_path %></li>
-		<li><%= link_to "Git Registry" , gifts_path %></li>
-		<li><%= link_to "Directions" , directions_path %></li>
-		<li><%= link_to "Home" , root_path %></li>
-	  	<li><%= link_to('Log Out', destroy_user_session_path, :method => :delete) %> </li>
-	<% end %>
-</ul>
+<div class="nav">
+	<ul class="list list-horizontal">
+		<% if user_signed_in? %>
+			<li><%= link_to "Home" , root_path %></li>
+			<li><%= link_to "RSVP" , rsvp_path %></li>
+			<li><%= link_to "Gift Registry" , gifts_path %></li>
+			<li><%= link_to "Details" , details_path %></li>
+		  	<li><%= link_to('Log Out', destroy_user_session_path, :method => :delete) %> </li>
+		<% end %>
+	</ul>
+</div>
