--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,3 @@
-<h1><%="#{@greeting} #{current_user.first_name}!"%></h1>
+<div class="container-center">
+	<h1><%="#{@greeting} #{current_user.first_name}!"%></h1>
+</div>
