style gifts section

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,15 @@
  * require_self
  */
 
+ @import 'mixins/mixins';
  @import 'variables';
  @import 'type';
  @import 'list';
  @import 'nav';
  @import 'grid';
+ @import 'page';
  @import 'form';
  @import 'toast';
+ @import 'button';
+ @import 'gifts';
+
