--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -3,7 +3,7 @@ $transition-speed-text: 0.2s;
 
 .nav {
 	padding: 20px;
-	margin: 0 auto;
+	margin: 0 auto 20px;
 	display: flex;
     justify-content: center;
 
@@ -36,7 +36,7 @@ $transition-speed-text: 0.2s;
 		    top: 0;
 		    height: 100%;
 		    width: 0%;
-		    -webkit-transition:width $transition-speed-bg ease-out;
+		    -webkit-transition: width $transition-speed-bg ease-out;
 		}
 
 		&:nth-child(1) {
