--- a/app/assets/stylesheets/type.scss
+++ b/app/assets/stylesheets/type.scss
@@ -4,12 +4,21 @@ html {
     -webkit-font-smoothing: antialiased;
     background-color: #fff;
 	color: #333;
-	font-weight: 100;
+	font-weight: 400;
 }
 
 h1, h2, h3 {
 	font-family: "proxima-nova",sans-serif;
 	font-weight: 100;
+	margin-top: 0;
+}
+
+h4,h5,h6 {
+	margin-top: 0;
+}
+
+p {
+	margin: 0 0 1rem;
 }
 
 a {
@@ -18,6 +27,10 @@ a {
 	&:visited {
 		color: $text-body;
 	}
+}
+
+.text-center {
+	text-align: center;
 }
 
 
