--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -9,13 +9,18 @@
   border: 1px solid transparent;
   white-space: nowrap;
   padding: 15px 35px;
-  box-shadow: 2px 1px 9px -2px rgba(0, 0, 0, 0.22);
+  box-shadow: 2px 1px 3px -2px rgba(0, 0, 0, 0.22);
 
   &:active {
-  	box-shadow: inset 1px 2px 7px 0px rgba(0, 0, 0, 0.22);
+  	box-shadow: inset 1px 1px 10px -3px rgba(0, 0, 0, 0.22);
   }
 }
 
 .btn-yellow {
 	background-color: $yellow;
+}
+
+.btn-mobile {
+  background-color: $orange;
+  margin-bottom: 20px;
 }
