--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,6 @@
-<div class="nav">
-	<ul class="list list-horizontal">
+<nav class="nav container-center">
+	<button class="btn hidden-desktop btn-mobile col-full">Menu</button>
+	<ul class="list list-horizontal nav-list">
 		<% if user_signed_in? %>
 			<li><%= link_to "Home" , root_path %></li>
 			<li><%= link_to "RSVP" , rsvp_path %></li>
@@ -8,4 +9,4 @@
 		  	<li><%= link_to('Log Out', destroy_user_session_path, :method => :delete) %> </li>
 		<% end %>
 	</ul>
-</div>
+</nav>
