--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -17,10 +17,22 @@
 }
 
 .btn-yellow {
-	background-color: $yellow;
+  background-color: $yellow;
+}
+
+.btn-green {
+  background-color: $green;
+}
+
+.btn-red {
+	background-color: $red;
 }
 
 .btn-mobile {
   background-color: $orange;
   margin-bottom: 20px;
+}
+
+.btn-full {
+  width: 100%;
 }
