--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -7,6 +7,15 @@ $yellow: #FAEC29;
 $orange: #FF8913;
 $maroon: #C62F62;
 $red: #CF3944;
+$green2: #3DC39C;
+$blue: #2A65B5;
+
+$colour1: $green2;
+$colour2: $yellow;
+$colour3: $orange;
+$colour4: $maroon;
+$colour5: $blue;
+
 
 $page-title: $green;
 
