--- a/app/assets/stylesheets/rsvp.scss
+++ b/app/assets/stylesheets/rsvp.scss
@@ -3,9 +3,9 @@
 	padding: 5px 15px;
     margin-bottom: 10px;
 
-    &:hover {
-    	background-color: $yellow;
-    }
+    // &:hover {
+    // 	background-color: $yellow;
+    // }
 }
 
 .rsvp-checkbox {
@@ -22,22 +22,32 @@
 }
 
 .rsvp-label {
-	cursor: pointer;
-	display: block;
-	width: 100%;
-	&:after {
-		content: 'Not Attending';
-		position: absolute;
-		right: 15px;
-    	width: 125px;
-		text-align: right;
-		color: $red;
-	}
+	margin-right: 10px;
+}
+//.rsvp-label {
+// 	cursor: pointer;
+// 	display: block;
+// 	width: 100%;
+// 	&:after {
+// 		content: 'Not Attending';
+// 		position: absolute;
+// 		right: 15px;
+//     	width: 125px;
+// 		text-align: right;
+// 		color: $red;
+// 	}
 
+// }
+
+.rsvp-textarea {
+	width: 100%;
+    border: 1px solid $grey;
+    border-radius: 3px;
+    height: 100px;
 }
 
 .rsvp-form {
-	flex: 0 1 330px;
+	flex: 0 1 400px;
 }
 
 .rsvp-list {
@@ -46,5 +56,15 @@
 
 .rsvp-submit {
 	padding: 0 15px;
+}
+
+.rsvp-row {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.rsvp-col-full {
+	flex: 0 0 100%;
 }
 
