--- a/app/assets/stylesheets/util.scss
+++ b/app/assets/stylesheets/util.scss
@@ -26,3 +26,12 @@
 .show {
 	display: block;
 }
+
+.gmap-overlay {
+   background:transparent; 
+   position:relative; 
+   width: 100% ;
+   height: 300px;
+   top:300px;  /* your iframe height */
+   margin-top:-300px;  /* your iframe height */
+}
