add tips and tricks and home page stuff

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,4 +28,12 @@
  @import 'button';
  @import 'gifts';
  @import 'rsvp';
+ @import 'home-list';
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
