--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -10,3 +10,99 @@
 		display: inline-block;
 	}
 }
+
+.list-highlight-title {
+	padding: 5px 15px;
+}
+
+.list-highlight {
+	
+	li {
+	    background: transparent;
+	    position: relative;
+	    padding: 5px 15px;
+	    margin-bottom: 10px;
+	}
+
+	.list-item {
+
+		a {
+			position: relative;
+			transition: color $transition-speed-text ease-out;
+		}
+
+		&:before {
+			content: '';
+		    position: absolute;
+		    left: 0;
+		    top: 0;
+		    height: 100%;
+		    width: 0%;
+		    -webkit-transition: width $transition-speed-bg ease-out;
+		}
+
+		&:hover {
+
+			a {
+				transition: color $transition-speed-text ease-out;
+			}
+
+			&:before {
+				width: 100%;
+			}
+		}
+
+		&:nth-child(1) {
+			&:hover {
+				a {
+					color: #FFF;
+				}
+			}
+			&:before {
+				background: $colour1;
+			}
+		}
+
+		&:nth-child(2) {
+			&:before {
+				background: $colour2;
+			}
+		}
+
+		&:nth-child(3) {
+			&:hover {
+				a {
+					color: #FFF;
+				}
+			}
+			&:before {
+				background: $colour3;
+			}
+		}
+
+		&:nth-child(4) {
+			&:hover {
+				a {
+					color: #FFF;
+				}
+			}
+
+			&:before {
+				background: $colour4;
+			}
+		}
+
+		&:nth-child(5) {
+			
+			&:hover {
+				a {
+					color: #FFF;
+				}
+			}
+
+			&:before {
+				background: $colour5;
+			}
+		}
+	}
+}
