--- a/app/assets/stylesheets/type.scss
+++ b/app/assets/stylesheets/type.scss
@@ -1,6 +1,7 @@
 body,
 html {
-    font-family: "acumin-pro",sans-serif;
+    // font-family: "acumin-pro",sans-serif;
+    font-family: "proxima-nova",sans-serif;
     -webkit-font-smoothing: antialiased;
     background-color: #fff;
 	color: #333;
