--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -24,3 +24,6 @@ $device-width-sm: 568px;
 $device-width-md: 768px;
 $device-width-lg: 1024px;
 $device-width-xl: 1280px;
+
+$transition-speed-bg: 0.3s;
+$transition-speed-text: 0.2s;
