--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,6 +6,7 @@
 			<li><%= link_to "RSVP" , rsvp_path %></li>
 			<li><%= link_to "Gift Registry" , gifts_path %></li>
 			<li><%= link_to "Details" , details_path %></li>
+			<li><%= link_to "Tips and Tricks" , tips_and_tricks_path %></li>
 		  	<li><%= link_to('Log Out', destroy_user_session_path, :method => :delete) %> </li>
 		<% end %>
 	</ul>
