--- a/app/views/pages/details.html.erb
+++ b/app/views/pages/details.html.erb
@@ -8,7 +8,7 @@
 		</div>
 		<div class="col-full text-center">
 			<p>Edmond Gardens </p>
-			<p>429 Ferry Road, Upper Riccarton, Christchurch</p>
+			<p>2:00pm 429 Ferry Road, Upper Riccarton, Christchurch</p>
 		</div>
 		<div class="col-full text-center">
 		  	<div class="gmap-overlay hidden-mobile" onClick="style.pointerEvents='none'"></div>
@@ -18,21 +18,20 @@
 			<a href="https://www.google.co.nz/maps/place/Edmonds+Park/@-43.54065,172.6646339,18z/data=!4m5!3m4!1s0x6d3189ebef457209:0xf00ef87655c16f0!8m2!3d-43.54065!4d172.6657282?hl=en" class="btn btn-yellow col-full hidden-desktop" target="_blank" >View on Google Maps</a>
 		</div>
 	</section>
-
 	<section class="container-center page-section">
 		<div class="col-full">
 			<h2 class="text-center">Reception</h2>
 		</div>
 		<div class="col-full text-center">
-			<p>Edmond Gardens </p>
+			<p>YMCA</p>
 			<p>429 Ferry Road, Upper Riccarton, Christchurch</p>
 		</div>
 		<div class="col-full text-center">
 		  	<div class="gmap-overlay hidden-mobile" onClick="style.pointerEvents='none'"></div>
-			<iframe width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBNhmf2ErY7r15K6WYQmgMNFhjQaLrwdiU&q=Edmonds+Park" allowfullscreen class="hidden-mobile"></iframe>
+			<iframe width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBNhmf2ErY7r15K6WYQmgMNFhjQaLrwdiU&q=YMCA" allowfullscreen class="hidden-mobile"></iframe>
 		</div>
 		<div class="col-full text-center">
-			<a href="https://www.google.co.nz/maps/place/Edmonds+Park/@-43.54065,172.6646339,18z/data=!4m5!3m4!1s0x6d3189ebef457209:0xf00ef87655c16f0!8m2!3d-43.54065!4d172.6657282?hl=en" class="btn btn-yellow col-full hidden-desktop" target="_blank">View on Google Maps</a>
+			<a href="https://goo.gl/maps/4U2iYtKPWfv" class="btn btn-yellow col-full hidden-desktop" target="_blank">View on Google Maps</a>
 		</div>
 	</section>
 </div>
