--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,15 @@
-<div class="container-center">
-	<h1><%="#{@greeting} #{current_user.first_name}!"%></h1>
+<div class="container home-inner">
+	<div class="container-center home-inner-center">
+		<%#= image_tag('face.svg') %>
+		<div class="col-full text-center">
+			<h1 class="home-title">Andrew and Sarah</h1>
+		</div>
+		<div class="col-full text-center">
+			<h2 class="home-subtitle">Nov 26th 2016, Christchurch</h2>
+		</div>
+		<!-- <h1><%#="#{@greeting} #{current_user.first_name}!"%></h1> -->
+
+	</div>
+
+	<%= render partial: 'pages/home_nav' %>
 </div>
