--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -38,7 +38,7 @@
 		    -webkit-transition: width $transition-speed-bg ease-out;
 		}
 
-		&:nth-child(1) {
+		&:nth-child(5n + 1) {
 			&:hover {
 				a {
 					color: #FFF;
@@ -49,13 +49,13 @@
 			}
 		}
 
-		&:nth-child(2) {
+		&:nth-child(5n + 2) {
 			&:before {
 				background: $colour2;
 			}
 		}
 
-		&:nth-child(3) {
+		&:nth-child(5n + 3) {
 			&:hover {
 				a {
 					color: #FFF;
@@ -66,7 +66,7 @@
 			}
 		}
 
-		&:nth-child(4) {
+		&:nth-child(5n + 4) {
 			&:hover {
 				a {
 					color: #FFF;
@@ -78,7 +78,7 @@
 			}
 		}
 
-		&:nth-child(5) {
+		&:nth-child(5n + 5) {
 			
 			&:hover {
 				a {
