add new fonts and sizing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,8 @@
 
  @import 'mixins/mixins';
  @import 'variables';
- @import 'util';
  @import 'type';
+ @import 'util';
  @import 'list';
  @import 'nav';
  @import 'grid';
@@ -29,6 +29,7 @@
  @import 'gifts';
  @import 'rsvp';
  @import 'home-list';
+ @import 'us';
 
 html {
   box-sizing: border-box;
