--- a/app/assets/stylesheets/type.scss
+++ b/app/assets/stylesheets/type.scss
@@ -1,15 +1,39 @@
+@font-face {
+    font-family: 'daydreamerregular';
+    src: url('daydreamer-webfont.woff2') format('woff2'),
+         url('daydreamer-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'hello_goodbyeregular';
+    src: url('hellogoodbye-webfont.woff2') format('woff2'),
+         url('hellogoodbye-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body,
 html {
     // font-family: "acumin-pro",sans-serif;
-    font-family: "proxima-nova",sans-serif;
+    font-family: 'hello_goodbyeregular',sans-serif;
     -webkit-font-smoothing: antialiased;
     background-color: #fff;
 	color: #333;
 	font-weight: 400;
+	font-style: normal;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+
+	margin: 0 auto;
 }
 
+
 h1, h2, h3 {
-	font-family: "proxima-nova",sans-serif;
+	font-family: 'daydreamerregular',sans-serif;
 	font-weight: 100;
 	margin-top: 0;
 }
@@ -41,5 +65,143 @@ a {
 .text-center {
 	text-align: center;
 }
+
+body {
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+}
+
+h1 {
+  // font-family: inherit;
+  // font-weight: 600;
+  font-style: inherit;
+  font-size: 3.125rem;
+  line-height: 4.5rem;
+  margin-top: 2.25rem;
+  margin-bottom: 2.25rem;
+}
+h2 {
+  // font-family: inherit;
+  // font-weight: 600;
+  font-style: inherit;
+  font-size: 3.125rem;
+  line-height: 4.5rem;
+  margin-top: 2.25rem;
+  margin-bottom: 2.25rem;
+}
+h3 {
+  // font-family: inherit;
+  // font-weight: 600;
+  font-style: inherit;
+  font-size: 2.1875rem;
+  line-height: 2.25rem;
+  margin-top: 2.25rem;
+  margin-bottom: 0rem;
+}
+h4 {
+  // font-family: inherit;
+  // font-weight: 600;
+  font-style: inherit;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+  margin-top: 2.25rem;
+  margin-bottom: 0rem;
+}
+h5 {
+  // font-family: inherit;
+  // font-weight: 400;
+  font-style: italic;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+  margin-top: 2.25rem;
+  margin-bottom: 0rem;
+}
+p, ul, ol, pre, table, blockquote {
+  margin-top: 0rem;
+  margin-bottom: 2.25rem;
+
+}
+// h1 {
+//   // font-family: inherit;
+//   font-weight: 600;
+//   font-style: inherit;
+//   font-size: 76px;
+//   line-height: 81px;
+//   margin-top: 27px;
+//   margin-bottom: 0px;
+// }
+
+// h2 {
+//   // font-family: inherit;
+//   // font-weight: 600;
+//   font-style: inherit;
+//   font-size: 47px;
+//   line-height: 54px;
+//   margin-top: 27px;
+//   margin-bottom: 27px;
+// }
+
+// h3 {
+//   // font-family: inherit;
+//   // font-weight: 600;
+//   font-style: inherit;
+//   font-size: 29px;
+//   line-height: 54px;
+//   margin-top: 27px;
+//   margin-bottom: 0px;
+// }
+
+// h4 {
+//   // font-family: inherit;
+//   // font-weight: 600;
+//   font-style: inherit;
+//   font-size: 18px;
+//   line-height: 27px;
+//   margin-top: 27px;
+//   margin-bottom: 0px;
+// }
+
+// h5 {
+//   // font-family: inherit;
+//   // font-weight: 400;
+//   font-style: italic;
+//   font-size: 18px;
+//   line-height: 27px;
+//   margin-top: 27px;
+//   margin-bottom: 0px;
+// }
+
+// p, ul, ol, pre, table, blockquote {
+//   margin-top: 0px;
+//   margin-bottom: 27px;
+// }
+
+ul ul, ol ol, ul ol, ol ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+hr {
+  border: 1px solid;
+  margin: -1px 0;
+}
+
+b, strong, em, small, code {
+  line-height: 1;
+}
+
+sup {
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
 
 
