--- a/app/assets/stylesheets/home-list.scss
+++ b/app/assets/stylesheets/home-list.scss
@@ -1,7 +1,7 @@
 .home {
 	min-height: 100vh;
     flex-direction: column;
-    padding-top: 60px;
+    // padding-top: 60px;
 }
 .home-inner {
     flex: 1 1 auto;
@@ -15,19 +15,19 @@
 }
 
 .home-title {
-	font-size: 28px;
-	margin-bottom: 0;
-	@include respond($device-width-sm) {
-		font-size: 48px;
-	}
+	// font-size: 28px;
+	// margin-bottom: 0;
+	// @include respond($device-width-sm) {
+	// 	font-size: 48px;
+	// }
 }
 
 .home-subtitle {
-	font-size: 18px;
-	margin-bottom: 0;
-	@include respond($device-width-sm) {
-		font-size: 24px;
-	}
+	// font-size: 18px;
+	// margin-bottom: 0;
+	// @include respond($device-width-sm) {
+	// 	font-size: 24px;
+	// }
 }
 
 .home-list  {
