--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -1,5 +1,5 @@
 .btn {
- display: inline-block;
+  display: inline-block;
   margin-bottom: 0; // For input.btn
   text-align: center;
   vertical-align: middle;
@@ -8,8 +8,10 @@
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
   white-space: nowrap;
-  padding: 15px 35px;
+  padding: 10px 35px;
   box-shadow: 2px 1px 3px -2px rgba(0, 0, 0, 0.22);
+  font-size: 28px;
+  font-family: $font-amatic;
 
   &:active {
   	box-shadow: inset 1px 1px 10px -3px rgba(0, 0, 0, 0.22);
