--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,11 +35,10 @@
 		</div>
 	<% else %>
 		<div class="border-img-wrapper">
-			<%= image_tag 'flowers-top-left-2.svg', class:"border-img border-img--left" %>
-			<%= image_tag 'flowers-top-right-2.svg', class:"border-img border-img--right" %>
+			<%= image_tag 'flowers-top-left-2.svg', class:"border-img border-img--left border-img--top" %>
+			<%= image_tag 'flowers-top-right-2.svg', class:"border-img border-img--right border-img--top" %>
 			<%= yield %>
-			<%= image_tag 'flowers-top-left-2.svg', class:"border-img border-img--left" %>
-			<%= image_tag 'flowers-top-right-2.svg', class:"border-img border-img--right" %>
+			<%= render partial: 'layouts/footer' %>
 		</div>
 	<% end %>
 	<%#= render partial: 'layouts/wet_wedding' %>
